# Artemiy_hw_31

./: manage.py  pyproject.toml  pytests.ini
Avito30/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_selection.py  0003_rename_owner_ad_author_remove_selection_owner.py  0004_selection_author.py  0005_rename_author_selection_owner.py  0006_category_slug_alter_ad_description_alter_ad_name_and_more.py  0007_remove_selection_owner_selection_author.py  0008_rename_author_selection_owner.py  0009_rename_owner_selection_author.py  0010_rename_author_ad_owner.py  0011_rename_owner_ad_author.py  0012_rename_author_selection_owner.py
authentication/: admin.py  models.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py  0002_remove_user_location_user_location.py  0003_alter_user_role.py  0004_alter_user_password.py  0005_remove_user_age.py  0006_user_birth_date.py  0007_alter_user_birth_date.py  0008_alter_user_email.py  0009_alter_user_email.py  0010_alter_user_email.py  0011_alter_user_email.py  0012_alter_user_email.py  0013_alter_user_email.py  0014_alter_user_birth_date.py  0015_alter_user_birth_date.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/ads/: test_ad_create.py  test_ad_detail.py  test_ads_list.py  test_selection_create.py
